out
localhost:TFG:# make
make -C /lib/modules/6.12.41-current-bcm2711/build M=/home/noel/Desktop/TFG modules
make[1]: Entering directory '/usr/src/linux-headers-6.12.41-current-bcm2711'
  CC [M]  /home/noel/Desktop/TFG/crypth.o
  MODPOST /home/noel/Desktop/TFG/Module.symvers
  CC [M]  /home/noel/Desktop/TFG/crypth.mod.o
  LD [M]  /home/noel/Desktop/TFG/crypth.ko
make[1]: Leaving directory '/usr/src/linux-headers-6.12.41-current-bcm2711'
localhost:TFG:# insmod crypth.ko
localhost:TFG:# dmesg | tail
[ 8059.976472] hwmon hwmon1: Voltage normalised
[ 8061.988792] hwmon hwmon1: Undervoltage detected!
[ 8066.020437] hwmon hwmon1: Voltage normalised
[ 8067.697219] vc4-drm gpu: swiotlb buffer is full (sz: 2097152 bytes), total 32768 (slots), used 0 (slots)
[ 8080.134167] hwmon hwmon1: Undervoltage detected!
[ 8082.148769] hwmon hwmon1: Voltage normalised
[ 8096.110424] K (32Bytes) generated in the load = 15:d5:54:59:2b:8c:45:09:14:ca:5f:4a:7c:76:00:e9:6c:a2:0a:88:65:51:1f:de:12:79:82:a8:a7:5d:98:78
[ 8096.110464] K (Base64) = FdVUWSuMRQkUyl9KfHYA6WyiCohlUR/eEnmCqKddmHg=
[ 8096.110478] Creating new proc file: /proc/fddev
[ 8096.110504] Creating new proc file: /proc/hmacdev
localhost:TFG:# ./user_wr
File descriptor written in /proc/fddev:
3
Content certificated written through /proc/hmacdev:
This is an authentic content, validated by HMAC(SHA-256)!!
Content of the created file (./file_handoff):
This is an authentic content, validated by HMAC(SHA-256)!!

---

QUHrFe7GKj0P4/8P9qmoD9Ohs+yRL8hhXmIO5IfkiF8=
localhost:TFG:# dmesg | tail
[ 8067.697219] vc4-drm gpu: swiotlb buffer is full (sz: 2097152 bytes), total 32768 (slots), used 0 (slots)
[ 8080.134167] hwmon hwmon1: Undervoltage detected!
[ 8082.148769] hwmon hwmon1: Voltage normalised
[ 8096.110424] K (32Bytes) generated in the load = 15:d5:54:59:2b:8c:45:09:14:ca:5f:4a:7c:76:00:e9:6c:a2:0a:88:65:51:1f:de:12:79:82:a8:a7:5d:98:78
[ 8096.110464] K (Base64) = FdVUWSuMRQkUyl9KfHYA6WyiCohlUR/eEnmCqKddmHg=
[ 8096.110478] Creating new proc file: /proc/fddev
[ 8096.110504] Creating new proc file: /proc/hmacdev
[ 8135.683905] write handler
[ 8135.683980] write to /proc/fddev: written 1 bytes from the user
[ 8135.685149] Successed printH: wrote 109 bytes (msg + sep + HMACb64)
localhost:TFG:# rmmod crypth 
localhost:TFG:# dmesg | tail
[ 8096.110424] K (32Bytes) generated in the load = 15:d5:54:59:2b:8c:45:09:14:ca:5f:4a:7c:76:00:e9:6c:a2:0a:88:65:51:1f:de:12:79:82:a8:a7:5d:98:78
[ 8096.110464] K (Base64) = FdVUWSuMRQkUyl9KfHYA6WyiCohlUR/eEnmCqKddmHg=
[ 8096.110478] Creating new proc file: /proc/fddev
[ 8096.110504] Creating new proc file: /proc/hmacdev
[ 8135.683905] write handler
[ 8135.683980] write to /proc/fddev: written 1 bytes from the user
[ 8135.685149] Successed printH: wrote 109 bytes (msg + sep + HMACb64)
[ 8169.160562] vc4-drm gpu: swiotlb buffer is full (sz: 2097152 bytes), total 32768 (slots), used 0 (slots)
[ 8180.561615] Delating proc file: /proc/fddev
[ 8180.561651] Delating proc file: /proc/hmacdev










noel@localhost:~/Desktop/TFG$ make
make -C /lib/modules/6.12.41-current-bcm2711/build M=/home/noel/Desktop/TFG modules
make[1]: Entering directory '/usr/src/linux-headers-6.12.41-current-bcm2711'
  CC [M]  /home/noel/Desktop/TFG/crypth.o
/home/noel/Desktop/TFG/crypth.c: In function ‘get_hmac’:
/home/noel/Desktop/TFG/crypth.c:60:8: error: implicit declaration of function ‘compute_hmac_sha256’ [-Werror=implicit-function-declaration]
   60 |   rc = compute_hmac_sha256((const u8 *)K, KEY_SIZE, (const u8 *)buf, (size_t)buf_len, hmac, &hmac_len);
      |        ^~~~~~~~~~~~~~~~~~~
In file included from ./include/asm-generic/bug.h:22,
                 from ./arch/arm64/include/asm/bug.h:26,
                 from ./include/linux/bug.h:5,
                 from ./arch/arm64/include/asm/cpufeature.h:24,
                 from ./arch/arm64/include/asm/hwcap.h:9,
                 from ./arch/arm64/include/asm/arch_timer.h:12,
                 from ./arch/arm64/include/asm/timex.h:8,
                 from ./include/linux/timex.h:67,
                 from ./include/linux/time32.h:13,
                 from ./include/linux/time.h:60,
                 from ./arch/arm64/include/asm/stat.h:12,
                 from ./include/linux/stat.h:6,
                 from ./include/linux/module.h:13,
                 from /home/noel/Desktop/TFG/crypth.c:1:
/home/noel/Desktop/TFG/crypth.c: In function ‘printH’:
./include/linux/kern_levels.h:5:25: warning: format ‘%zd’ expects argument of type ‘signed size_t’, but argument 3 has type ‘int’ [-Wformat=]
    5 | #define KERN_SOH        "\001"          /* ASCII Start Of Header */
      |                         ^~~~~~
./include/linux/printk.h:468:25: note: in definition of macro ‘printk_index_wrap’
  468 |                 _p_func(_fmt, ##__VA_ARGS__);                           \
      |                         ^~~~
/home/noel/Desktop/TFG/crypth.c:209:5: note: in expansion of macro ‘printk’
  209 |     printk(KERN_ERR "Error printH: generating HMAC failed para fd %d: %zd\n", fd, rc);
      |     ^~~~~~
./include/linux/kern_levels.h:11:25: note: in expansion of macro ‘KERN_SOH’
   11 | #define KERN_ERR        KERN_SOH "3"    /* error conditions */
      |                         ^~~~~~~~
/home/noel/Desktop/TFG/crypth.c:209:12: note: in expansion of macro ‘KERN_ERR’
  209 |     printk(KERN_ERR "Error printH: generating HMAC failed para fd %d: %zd\n", fd, rc);
      |            ^~~~~~~~
/home/noel/Desktop/TFG/crypth.c: In function ‘simple_init’:
/home/noel/Desktop/TFG/crypth.c:343:16: warning: ‘Kb64’ is used uninitialized [-Wuninitialized]
  343 |   int b64len = base64_encode ((const u8 *) K, KEY_SIZE, Kb64);
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/noel/Desktop/TFG/crypth.c:342:9: note: ‘Kb64’ was declared here
  342 |   char *Kb64;
      |         ^~~~
cc1: some warnings being treated as errors
make[3]: *** [scripts/Makefile.build:244: /home/noel/Desktop/TFG/crypth.o] Error 1
make[2]: *** [/usr/src/linux-headers-6.12.41-current-bcm2711/Makefile:1945: /home/noel/Desktop/TFG] Error 2
make[1]: *** [Makefile:224: __sub-make] Error 2
make[1]: Leaving directory '/usr/src/linux-headers-6.12.41-current-bcm2711'
make: *** [Makefile:19: all] Error 2
